# plover-machine-hid

./: LICENSE  README.md  georgi_plover-hid.hex  hid_option.py  plover_machine_hid.py  setup.cfg  the_uni_plover-hid.hex  the_uni_pro_micro_plover-hid.hex  the_uni_usb_c_plover-hid.hex
