[metadata]
name = plover-machine-hid
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev12
  hid>=1.0.4,<2
  bitarray>=2.8.1,<3
py_modules =
  plover_machine_hid

[options.entry_points]
plover.machine =
  Plover HID = plover_machine_hid:HidMachine
